--- a/header.html
+++ b/header.html
@@ -77,9 +77,9 @@
 		<a href="/"><img src = "bilder/logga_morf_vit.png" style = "height: 100%; width: auto;"></img></a>
             </div> 
 		
-            <div class = right_div>
+            <!--<div class = right_div>
             <a href = "drakens-värld" class = head_cont>DRAKENS VÄRLD</a>
-            </div> 
+            </div>-->
         </div>
     </body>
 </html>
