--- a/header.html
+++ b/header.html
@@ -15,6 +15,8 @@
         body{
             margin: 0px;
             padding: 0px;
+	    max-width: 100% !important;
+    	    overflow-x: hidden !important;
         }
 
         .head_div{
