--- a/header.html
+++ b/header.html
@@ -15,7 +15,7 @@
         body{
             margin: 0px;
             padding: 0px;
-	    max-width: 100% !important;
+	    max-width: 100vw !important;
     	    overflow-x: hidden !important;
         }
 
