--- a/index.html
+++ b/index.html
@@ -319,7 +319,7 @@
 		        </div>
 	  		<div class = side_div>
 				<img src="https://i.imgur.com/hSM3AhK.png" alt="GAFFEL" style="width:100%;height:auto;">
-    				<h1 style = "color: #FFFEF7FF">Gaffel är Sveriges farligaste popkulturmagasin, allt du behöver veta om pop, kultur och popkultur.</h1>
+    				<h1 style = "color: white">Gaffel är Sveriges farligaste popkulturmagasin, allt du behöver veta om pop, kultur och popkultur.</h1>
 		        </div>
 	   		`
 		    console.log([isMobile,window.innerWidth]);
