--- a/index.html
+++ b/index.html
@@ -236,10 +236,10 @@
 		
 		<div id ='blogg_inlägg' class = blog_area>
 			<h2 style = "width: 100%;">SENASTE</h2>
+			<div id = 'main35'><script>draw_article_button('main35','några-militära-nyord',isMobile)</script></div>
 			<div id = 'main34'><script>draw_article_button('main34','staden-av-igår',isMobile)</script></div>
 			<div id = 'main33'><script>draw_article_button('main33','dagbok-från-kylskåpet',isMobile)</script></div>
-			<div id = 'main32'><script>draw_article_button('main32','om-tom-alandh',isMobile)</script></div>
-
+			
 			<h2 style = "width: 100%;">GAFFELS INNE-UTE-LISTA</h2>
 			<div id = 'iul'><script>draw_article_button('iul','inne-ute-dec-24',isMobile)</script></div>
 			<div style = "display: grid;">
@@ -247,8 +247,9 @@
 				<a class = 'artikel_knapp' href='/artikel?=inne-ute-okt-24'>OKTOBER</a>
 				<a class = 'artikel_knapp' href='/artikel?=inne-ute-sep-24'>SEPTEMBER</a>				
 			</div>
-
+			
 			<h2 style = "width: 100%;">ÄLDRE</h2>
+			<div id = 'main32'><script>draw_article_button('main32','om-tom-alandh',isMobile)</script></div>
 			<div id = 'main31'><script>draw_article_button('main31','anti-mölndal',isMobile)</script></div>
 			<div id = 'main30'><script>draw_article_button('main30','bergman-vs-widerberg',isMobile)</script></div>
 			<div id = 'main29'><script>draw_article_button('main29','om-medelklassens-semestervanor',isMobile)</script></div>
