--- a/index.html
+++ b/index.html
@@ -236,6 +236,7 @@
 		
 		<div id ='blogg_inlägg' class = blog_area>
 			<h2 style = "width: 100%;">SENASTE</h2>
+			<div id = 'main36'><script>draw_article_button('main36','multituden-i-en-hotellfrukost',isMobile)</script></div>
 			<div id = 'main35'><script>draw_article_button('main35','några-militära-nyord',isMobile)</script></div>
 			<div id = 'main34'><script>draw_article_button('main34','staden-av-igår',isMobile)</script></div>
 			<div id = 'main33'><script>draw_article_button('main33','dagbok-från-kylskåpet',isMobile)</script></div>
