--- a/tarot.html
+++ b/tarot.html
@@ -6,6 +6,10 @@
           .random_button{
               margin-left: auto;
               margin-right: auto;
+              display: block;
+
+              width:  clamp(10px,20%,100px);
+              height: clamp(10px,20%,100px);
           }
         </style>
     
