--- a/tarot.html
+++ b/tarot.html
@@ -3,13 +3,18 @@
 
     <head>
         <style>
+            body{
+                background-color: black;
+            }
+            
           .random_button{
               margin-left: auto;
               margin-right: auto;
               display: block;
 
               width:  clamp(30px,30%,80px);
-              height: clamp(30px,30%,80px);
+              height: clamp(30px,30%,80px);'
+              background: white;
           }
         </style>
     
