--- a/tarot.html
+++ b/tarot.html
@@ -15,6 +15,7 @@
               width:  clamp(30px,30%,80px);
               height: clamp(30px,30%,80px);'
               background: white;
+              border-radius: 50%;
           }
         </style>
     
