--- a/tarot.html
+++ b/tarot.html
@@ -14,8 +14,9 @@
 
               width:  clamp(30px,30%,80px);
               height: clamp(30px,30%,80px);'
-              background: white;
+              background-color: white;
               border-radius: 50%;
+              margin: 10px;
           }
         </style>
     
