--- a/tarot.html
+++ b/tarot.html
@@ -4,7 +4,7 @@
     <head>
         <style>
             body{
-                background-color: black;
+                background-color: red;
             }
             
           .random_button{
@@ -16,7 +16,7 @@
               height: clamp(30px,30%,80px);'
               background-color: white;
               border-radius: 50%;
-              margin: 10px;
+              padding: 10px;
           }
         </style>
     
