--- a/tarot.html
+++ b/tarot.html
@@ -46,11 +46,12 @@
     </head>
     
     <body>
-        h2 Click Run to Generate New Card
-        .card
-          .front
-          .back
-        h2 Hover Over Card to Flip
+        <h2>Click Run to Generate New Card</h2> 
+            <p class = "card"></p>
+            <p class = "front"></p> 
+            <p class = "back"></p> 
+
+        <h2>Hover Over Card to Flip</h2>
 
         <script>
                     const style = document.createElement('style'),
