--- a/tarot.html
+++ b/tarot.html
@@ -53,14 +53,8 @@
     <body>
         <div class="scene scene--card">
           <div class="card">
-            <div class="card__face card__face--front">front</div>
-            <div class="card__face card__face--back">back</div>
-          </div>
-        </div>
-        <div class="scene scene--card">
-          <div class="card">
-            <div class="card__face card__face--front">front</div>
-            <div class="card__face card__face--back">back</div>
+            <div class="card__face card__face--front" id="cf">front</div>
+            <div class="card__face card__face--back" id="cb">back</div>
           </div>
         </div>
         <p>Click card to flip.</p>
@@ -70,6 +64,7 @@
             [...cards].forEach((card)=>{
               card.addEventListener( 'click', function() {
                 card.classList.toggle('is-flipped');
+                  document.getElementById("cf").innerHTML = "New text!";
               });
             });
         </script>
