--- a/tarot.html
+++ b/tarot.html
@@ -57,7 +57,7 @@
             <div class="card__face card__face--back" id="cb">back</div>
           </div>
         </div>
-        <p>Click card to flip.</p>
+        <p id= "text">Click card to flip.</p>
 
         <script>
             function getRandomInt(max) {
@@ -76,7 +76,7 @@
                   console.log(i);
                   console.log(t);
                   
-                  document.getElementById("p").innerHTML = t;
+                  document.getElementById("text").innerHTML = t;
               });
             });
         </script>
