--- a/tarot.html
+++ b/tarot.html
@@ -10,7 +10,7 @@
               height: 260px;
             /*   border: 1px solid #CCC; */
               margin: 40px 0;
-              perspective: 600px;
+              perspective: 1000%;
             }
             
             .card {
