--- a/tarot.html
+++ b/tarot.html
@@ -63,12 +63,16 @@
             function getRandomInt(max) {
               return Math.floor(Math.random() * max);
             }
+
+            const flip = false;
             
             var cards = document.querySelectorAll('.card');
             [...cards].forEach((card)=>{
               card.addEventListener( 'click', function() {
                 card.classList.toggle('is-flipped');
                   text = ["ett","två","tre","fyra","fem","sex"];
+
+                  flip = !flip;
                   
                   var i = getRandomInt(5);
                   var t = text[i]
