--- a/tarot.html
+++ b/tarot.html
@@ -74,7 +74,7 @@
   
                   flip = !flip;
 
-                  if(!flip){
+                  if(flip){
                       var i = getRandomInt(5);
                       var t = text[i]
     
