--- a/tarot.html
+++ b/tarot.html
@@ -9,7 +9,8 @@
               width: 200px;
               height: 260px;
             /*   border: 1px solid #CCC; */
-              margin: 40px 0;
+              margin-left: auto;
+              margin-right: auto;
               perspective: 1000%;
             }
             
