--- a/index.html
+++ b/index.html
@@ -179,7 +179,7 @@
 	<div class = tidning>
 		
 		<div id = 'top' style = "width: 100%; margin-top: 20px; margin-bottom: 20px;">
-			<div id = 'blickfång'><script>draw_article_button('blickfång','inne-ute-dec-24',isMobile)</script></div>	
+			<div id = 'blickfång'><script>draw_article_button('blickfång','j-accuse-valhallabadet',isMobile)</script></div>	
 			<div style = "background: black; width: 100%;">
 
 			</div>
@@ -236,10 +236,10 @@
 		
 		<div id ='blogg_inlägg' class = blog_area>
 			<h2 style = "width: 100%;">SENASTE</h2>
+			<div id = 'main38'><script>draw_article_button('main38','j-accuse-valhallabadet',isMobile)</script></div>
+			<div id = 'main37'><script>draw_article_button('main37','en-kort-historia-om-dönern',isMobile)</script></div>
 			<div id = 'main36'><script>draw_article_button('main36','multituden-i-en-hotellfrukost',isMobile)</script></div>
-			<div id = 'main35'><script>draw_article_button('main35','några-militära-nyord',isMobile)</script></div>
-			<div id = 'main34'><script>draw_article_button('main34','staden-av-igår',isMobile)</script></div>	
-			
+
 			<h2 style = "width: 100%;">GAFFELS INNE-UTE-LISTA</h2>
 			<div id = 'iul'><script>draw_article_button('iul','inne-ute-dec-24',isMobile)</script></div>
 			<div style = "display: grid;">
@@ -249,6 +249,8 @@
 			</div>
 			
 			<h2 style = "width: 100%;">ÄLDRE</h2>
+			<div id = 'main35'><script>draw_article_button('main35','några-militära-nyord',isMobile)</script></div>
+			<div id = 'main34'><script>draw_article_button('main34','staden-av-igår',isMobile)</script></div>
 			<div id = 'main33'><script>draw_article_button('main33','dagbok-från-kylskåpet',isMobile)</script></div>
 			<div id = 'main32'><script>draw_article_button('main32','om-tom-alandh',isMobile)</script></div>
 			<div id = 'main31'><script>draw_article_button('main31','anti-mölndal',isMobile)</script></div>
