--- a/index.html
+++ b/index.html
@@ -146,7 +146,7 @@
 </head>
  
 <body>
-	<!--<script src = "script_closed.js"></script>-->
+	<script src = "script_closed.js"></script>
 	
 	<div id = 'web-header'><script> 
 		fetch('header.html')
