--- a/tarot.html
+++ b/tarot.html
@@ -16,6 +16,7 @@
             .framer{
                 margin-left: auto;
                 margin-right: auto;
+                width: auto;
             }
             
             .card {
