--- a/tarot.html
+++ b/tarot.html
@@ -48,6 +48,7 @@
             
             .card__face--front {
               background-image: url("/bilder/tarot/tarot_bakgrund.png");
+              background-size: auto;
             }
             
             .card__face--back {
