--- a/tarot.html
+++ b/tarot.html
@@ -47,8 +47,7 @@
             }
             
             .card__face--front {
-              background-image: url("/bilder/tarot/tarot_bakgrund.png");
-              background-size: auto;
+                background: red;
             }
             
             .card__face--back {
@@ -63,7 +62,9 @@
         <div class = "framer">
             <div class="scene scene--card">
               <div class="card">
-                <div class="card__face card__face--front" id="cf">front</div>
+                <div class="card__face card__face--front" id="cf">
+                    <img src = "/bilder/tarot/tarot_bakgrund"></img>    
+                </div>
                 <div class="card__face card__face--back" id="cb">back</div>
               </div>
             </div>
