--- a/tarot.html
+++ b/tarot.html
@@ -63,7 +63,7 @@
             <div class="scene scene--card">
               <div class="card">
                 <div class="card__face card__face--front" id="cf">
-                    <img src = "/bilder/tarot/tarot_bakgrund"></img>    
+                    <img src = "/bilder/tarot/tarot_bakgrund.png"></img>    
                 </div>
                 <div class="card__face card__face--back" id="cb">back</div>
               </div>
