--- a/tarot.html
+++ b/tarot.html
@@ -29,6 +29,11 @@
               transform-origin: center right;
               transition: transform 1s;
             }
+
+            .kort{
+                width: 100%;
+                height: 100%;
+            }
             
             .card.is-flipped {
               transform: translateX(-100%) rotateY(-180deg);
@@ -63,7 +68,7 @@
             <div class="scene scene--card">
               <div class="card">
                 <div class="card__face card__face--front" id="cf">
-                    <img src = "/bilder/tarot/tarot_bakgrund.png"></img>    
+                    <img src = "/bilder/tarot/tarot_bakgrund.png" class = "kort"></img>    
                 </div>
                 <div class="card__face card__face--back" id="cb">back</div>
               </div>
