--- a/tarot.html
+++ b/tarot.html
@@ -85,7 +85,7 @@
 
             var flip = false;
             text = ["ett","två","tre","fyra","fem","sex"];
-            bild = ["narren","magikern","påverskan","kejsarinnan","kejsaren","påven","de älskande","vagnen","justitia","eremiten",lyckans hjul","styrkan","den hängde","döden", "måttfullhet","döden","djävulen","plutus","stjärnan","månen","solen","yttersta domen","världen"]
+            bild = ["narren","magikern","påverskan","kejsarinnan","kejsaren","påven","de älskande","vagnen","justitia","eremiten","lyckans hjul","styrkan","den hängde","döden", "måttfullhet","döden","djävulen","plutus","stjärnan","månen","solen","yttersta domen","världen"]
             
             var cards = document.querySelectorAll('.card');
             [...cards].forEach((card)=>{
