--- a/tarot.html
+++ b/tarot.html
@@ -99,7 +99,7 @@
                       var b = bild[i]
     
                       console.log(i);
-                      console.log(t);
+                      console.log(b);
                       
                       document.getElementById("text").innerHTML = b;
                       document.getElementById("k").src = "/bilder/tarot/" + "b" + ".png";
