--- a/tarot.html
+++ b/tarot.html
@@ -102,7 +102,7 @@
                       console.log(b);
                       
                       document.getElementById("text").innerHTML = b;
-                      document.getElementById("k").src = "/bilder/tarot/" + "b" + ".png";
+                      document.getElementById("k").src = "/bilder/tarot/" + b + ".png";
                   }
               });
             });
