--- a/tarot.html
+++ b/tarot.html
@@ -2,13 +2,15 @@
 <html>
     <head>
         <style>
-            body { font-family: sans-serif; }
+            body { 
+                font-family: sans-serif;
+                background-color: black;
+            }
 
             .scene {
               display: inline-block;
-              width: 300px;
-              height: 500px;
-              border: 1px solid #CCC;
+              width: clamp(51.2,51.2%,512px);
+              height: clamp(80.6,80.6%,806px);
              
               perspective: 100%;
             }
