--- a/tarot.html
+++ b/tarot.html
@@ -9,8 +9,8 @@
 
             .scene {
               display: inline-block;
-              width: clamp(51.2,51.2vw,512px);
-              height: clamp(80.6,80.6vw,806px);
+              width: clamp(51.2px,51.2vw,512px);
+              height: clamp(80.6px,80.6vw,806px);
              
               perspective: 100%;
             }
