--- a/tarot.html
+++ b/tarot.html
@@ -19,7 +19,8 @@
               
               margin-left: auto;
               margin-right: auto;
-              width: 300px;
+              width: clamp(51.2px,51.2vw,512px);
+              height: clamp(80.6px,80.6vw,806px);
             }
             
             .card {
