--- a/tarot.html
+++ b/tarot.html
@@ -5,6 +5,7 @@
             body { 
                 font-family: sans-serif;
                 background-color: black;
+                margin: 0px;
             }
 
             .scene {
