--- a/tarot.html
+++ b/tarot.html
@@ -67,6 +67,15 @@
         </style>
     </head>
     <body>
+        <div id = 'web-header'><script> 
+		fetch('header.html')
+			.then(function(resp){return resp.text()})
+			.then(function(resp){
+				document.getElementById('web-header').innerHTML = resp;
+			});
+		
+    	</script></div>
+        
         <div class = "framer">
             <div class="scene scene--card">
               <div class="card">
