--- a/tarot.html
+++ b/tarot.html
@@ -5,7 +5,11 @@
             body { 
                 font-family: sans-serif;
                 background-color: black;
-                margin: 0px;
+
+	     	margin: 0px;
+		padding: 0px;
+		max-width: 100vw !important;
+		overflow-x: hidden !important;
             }
 
             .scene {
