--- a/tarot.html
+++ b/tarot.html
@@ -17,8 +17,8 @@
 
             .scene {
               display: inline-block;
-              width: clamp(51.2px,51.2vw,256px);
-              height: clamp(80.6px,80.6vw,403px);
+              width: 100%;
+              height: 100%;
              
               perspective: 100%;
             }
