--- a/tarot.html
+++ b/tarot.html
@@ -29,8 +29,15 @@
               margin-right: auto;
               width: clamp(51.2px,76.8vw,256px);
               height: clamp(80.6px,120.9vw,403px);
+
+	      margin-top: 50px;
             }
-            
+
+	    .beskrivning{
+		    color: white;
+		    text-align: center;
+	    }
+		
             .card {
               position: relative;
               width: 100%;
@@ -94,8 +101,9 @@
                 </div>
               </div>
             </div>
+	    <p id= "text" class = "beskrivning">Click card to flip.</p>
         </div>
-        <p id= "text">Click card to flip.</p>
+        
 
         <script>
             function getRandomInt(max) {
