--- a/tarot.html
+++ b/tarot.html
@@ -128,8 +128,8 @@
             var cards = document.querySelectorAll('.card');
             [...cards].forEach((card)=>{
               card.addEventListener( 'click', function() {
-                card.classList.toggle('is-flipped');
-		beskrivning.classList.toggle('is-flipped');
+		card.classList.toggle('is-flipped');
+		document.getElementById("text").classList.toggle('is-flipped');
   
                   flip = !flip;
 
