--- a/tarot.html
+++ b/tarot.html
@@ -6,7 +6,7 @@
 	<title>TAROTMASKINEN</title>
         <style>
             body { 
-                font-family: sans-serif;
+
                 background-color: black;
 
 	     	margin: 0px;
@@ -37,6 +37,7 @@
 		    color: white;
 		    opacity: 0;
 		    text-align: center;
+		    font-family: "Times New Roman", Times, serif;
 	    }
 
 	     .beskrivning.is-flipped{
