--- a/tarot.html
+++ b/tarot.html
@@ -38,6 +38,7 @@
 		    opacity: 0;
 		    text-align: center;
 		    font-family: "Times New Roman", Times, serif;
+		    font-size: 2em;
 	    }
 
 	     .beskrivning.is-flipped{
