--- a/tarot.html
+++ b/tarot.html
@@ -59,6 +59,9 @@
               transform-style: preserve-3d;
               transform-origin: center right;
               transition: transform 2s;
+		-webkit-user-select: none; /* Safari */
+		  -ms-user-select: none; /* IE 10 and IE 11 */
+		  user-select: none;
             }
 
             .kort{
