--- a/tarot.html
+++ b/tarot.html
@@ -114,7 +114,7 @@
     	</script></div>
         
         <div class = "framer">
-            <p id= "text" class = "intr">Framför dig har du en maskin som kan spå hur ditt 2025 kommer att bli. Det är bara att klicka på kortet, är man inte nöjd kan man klicka igen.</p>
+            <p class = "intr">Framför dig har du en maskin som kan spå hur ditt 2025 kommer att bli. Det är bara att klicka på kortet, är man inte nöjd kan man klicka igen.</p>
 	      <div class="scene scene--card">
               <div class="card">
                 <div class="card__face card__face--front" id="cf">
