--- a/tarot.html
+++ b/tarot.html
@@ -36,6 +36,7 @@
 		    text-align: center;
 		    font-family: "Times New Roman", Times, serif;
 		    font-size: 1.5em;
+		    color: white;
 	    }
 		
 	    .beskrivning{
