--- a/tarot.html
+++ b/tarot.html
@@ -46,6 +46,7 @@
 		    text-align: center;
 		    font-family: "Times New Roman", Times, serif;
 		    font-size: 1.1em;
+		    margin-top: 15px;
 	    }
 
 	     .beskrivning.is-flipped{
