--- a/tarot.html
+++ b/tarot.html
@@ -20,7 +20,7 @@
               width: 100%;
               height: 100%;
              
-              perspective: 100%;
+              perspective: 1000px;
             }
 
             .framer{
