--- a/tarot.html
+++ b/tarot.html
@@ -117,7 +117,7 @@
 		
     	</script></div>
 
-	<img src = "/bilder/tarot/tarot banner.png" id = "banner" style = "width: clamp(100%,100%,1000px) height: auto;"></img>
+	<img src = "/bilder/tarot/tarot banner.png" id = "banner" style = "width: clamp(100%,100%,1000px); height: auto;"></img>
 	<script>
 		function detectMob() {
 		    const toMatch = [
