--- a/tarot.html
+++ b/tarot.html
@@ -117,7 +117,7 @@
 		
     	</script></div>
 
-	<img src = "/bilder/tarot/tarot banner mobil.png" id = "banner" style = "width: clamp(0px,100%,700px); height: auto; margin-left: auto; margin-right: auto; display: block;"></img>
+	<img src = "/bilder/tarot/tarot logga.png" id = "banner" style = "width: clamp(0px,100%,700px); height: auto; margin-left: auto; margin-right: auto; display: block;"></img>
 	<script>
 		function detectMob() {
 		    const toMatch = [
