--- a/tarot.html
+++ b/tarot.html
@@ -104,7 +104,7 @@
               transform: rotateY(180deg);
             }
 
-		.button {
+		button {
 		  background-color: #04AA6D; /* Green */
 		  border: none;
 		  color: white;
@@ -165,8 +165,8 @@
               </div>
             </div>
 	    <p id= "text" class = "beskrivning">text</p>
-		<p><button>tell your friends</button></p>
-		<p class="result"></p>
+		<button>tell your friends</button>
+		
         </div>
         
 
