--- a/tarot.html
+++ b/tarot.html
@@ -105,14 +105,16 @@
             }
 
 		button {
-		  background-color: #04AA6D; /* Green */
+		  background-color: white
 		  border: none;
-		  color: white;
+		  color: black;
 		  padding: 15px 32px;
 		  text-align: center;
 		  text-decoration: none;
 		  display: inline-block;
-		  font-size: 16px;
+		  font-size: 1em;
+		  margin: auto;
+		  margin-bottom: 40px;
 		}
 		
         </style>
