--- a/tarot.html
+++ b/tarot.html
@@ -105,7 +105,7 @@
             }
 
 		button {
-		  background-color: white
+		  background-color: white;
 		  border: none;
 		  color: black;
 		  padding: 15px 32px;
@@ -113,7 +113,9 @@
 		  text-decoration: none;
 		  display: inline-block;
 		  font-size: 1em;
-		  margin: auto;
+		  font-weight: bold;
+		  margin-left: auto;
+              	  margin-right: auto;
 		  margin-bottom: 40px;
 		}
 		
