--- a/tarot.html
+++ b/tarot.html
@@ -105,13 +105,13 @@
             }
 
 		button {
+		  display: block;
 		  background-color: white;
 		  border: none;
 		  color: black;
 		  padding: 15px 32px;
 		  text-align: center;
 		  text-decoration: none;
-		  display: inline-block;
 		  font-size: 1em;
 		  font-weight: bold;
 		  margin-left: auto;
