--- a/tarot.html
+++ b/tarot.html
@@ -45,7 +45,8 @@
 		    text-align: center;
 		    font-family: "Times New Roman", Times, serif;
 		    font-size: 1.1em;
-		    margin-top: 25px;
+		    margin-top: 35px;
+		    margin-bottom: 35px;
 	    }
 
 	     .beskrivning.is-flipped{
@@ -114,6 +115,7 @@
 		  text-decoration: none;
 		  font-size: 0.8em;
 		  font-weight: bold;
+		  margin-top: 0px;
 		  margin-left: auto;
               	  margin-right: auto;
 		  margin-bottom: 100px;
