--- a/tarot.html
+++ b/tarot.html
@@ -37,6 +37,7 @@
 		    font-family: "Times New Roman", Times, serif;
 		    font-size: 1.1em;
 		    color: white;
+		    margin-bottom: 20px;
 	    }
 		
 	    .beskrivning{
