--- a/tarot.html
+++ b/tarot.html
@@ -5,7 +5,12 @@
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 	<title>TAROTMASKINEN</title>
         <style>
-            body { 
+            @font-face {
+		  font-family: helvetica_bold;
+		  src: url(font/Helvetica-Bold.ttf) format("truetype");
+	    }
+		
+	    body { 
 
                 background-color: black;
 
@@ -114,6 +119,7 @@
 		  padding: 7px 15px;
 		  text-align: center;
 		  text-decoration: none;
+		  font-family: helvetica_bold;
 		  font-size: 0.8em;
 		  font-weight: bold;
 		  margin-top: 0px;
