--- a/tarot.html
+++ b/tarot.html
@@ -53,6 +53,7 @@
 		    font-size: 1.1em;
 		    margin-top: 35px;
 		    margin-bottom: 35px;
+		    height: 10em;
 	    }
 
 	     .beskrivning.is-flipped{
