--- a/tarot.html
+++ b/tarot.html
@@ -51,9 +51,10 @@
 		    text-align: center;
 		    font-family: "Times New Roman", Times, serif;
 		    font-size: 1.1em;
-		    margin-top: 35px;
-		    margin-bottom: 35px;
-		    height: 10em;
+		    margin-top: 15px;
+		    margin-bottom: 15px;
+		    height: 8em;
+		    line-height: 8em;
 	    }
 
 	     .beskrivning.is-flipped{
