--- a/tarot.html
+++ b/tarot.html
@@ -48,13 +48,13 @@
 	    .beskrivning{
 		    color: white;
 		    opacity: 0;
+		    vertical-align: middle;
 		    text-align: center;
 		    font-family: "Times New Roman", Times, serif;
 		    font-size: 1.1em;
 		    margin-top: 15px;
 		    margin-bottom: 15px;
 		    height: 8em;
-		    line-height: 8em;
 	    }
 
 	     .beskrivning.is-flipped{
