--- a/tarot.html
+++ b/tarot.html
@@ -67,7 +67,7 @@
 	     }
 	      @keyframes fadeInSlow {
 		0% { opacity: 0; }
-		50% { opacity: 0; }
+		30% { opacity: 0; }
 		100% { opacity: 1; }
 	     }
 		
@@ -187,7 +187,7 @@
                 </div>
               </div>
             </div>
-	    <p id= "text" class = "beskrivning">text</p>
+	    <p id= "text" class = "beskrivning">ooooooooooooooooooooooooooooooooooooooooooooooooooooooooooooooooooooooooooooooooooooooooooooooooooooooooooooooooooooooooooooooooooooo</p>
 	    <button id = "knapp">tell your friends</button>
 	    <br><br>
         </div>
