--- a/tarot.html
+++ b/tarot.html
@@ -220,7 +220,7 @@
 		    "Nykterism väntar. Du kommer må bättre rent fysiskt men dina vänner inser långsamt att de bara tycker om dig när både du och de är fulla.",
 		    "He's been down at the crossroad. Rackaren är framme igen, du kommer att synda något så fruktansvärt mycket: otrohet, snatteri och piratkopiering står på schemat.",
 		    "Money talks. Plutus är gud över de rikedomar du kommer att erhålla på ett mer eller mindre etiskt sätt. Möjliga vägar: dropshipping, betalda samarbeten, sol-och-vårande på Gotland, blodsdiamanter. Pengarna kommer tyvärr leda till ditt förfall enligt den klassiska dramaturgin.",
-		    "Time to go big. Du är nästa Sabrina Carpenter och det här året för med sig ditt stora break, låtsläpp, spelningar och musiksamarbeten. Det slutar inte så bra dock, efter du redan har signat kommer du tyvärr förstå varför skivbolaget Luger heter som det gör.",
+		    "Time to go big. Du är nästa Sabrina Carpenter och det här året för med sig ditt stora break, låtsläpp, spelningar och musiksamarbeten. Det slutar inte så bra dock, efter att du redan har signat kommer du tyvärr förstå varför skivbolaget Luger heter som det gör.",
 		    "Din rymden-fas inleds någon gång i mars (referens). Hobbyastronomen i dig kommer inte att hålla tyst om nebulosor, exoplaneter eller möjliga intergalaktiska rymdskepp.",
 		    "Solen står i zenit och du är solen. Gassa i strålningen så mycket du kan, töm en solskyddstub om dagen. Glöm bort UV:t. Bli farligt brun. Lev.",
 		    "Låter värre än vad det är. Du kommer att bli kallad till rättegång, straffskalan är max en månad på kåken. Se det som en semester, bli påläst och vältränad.",
