--- a/index.html
+++ b/index.html
@@ -185,7 +185,7 @@
 	<div class = tidning>
 		
 		<div id = 'top' style = "width: 100%; margin-top: 20px; margin-bottom: 20px;">
-			<div id = 'blickfång'><script>draw_article_button('blickfång','j-accuse-valhallabadet',isMobile)</script></div>	
+			<div id = 'blickfång'><script>draw_article_button('blickfång','inne-ute-jan-25',isMobile)</script></div>	
 			<div style = "background: black; width: 100%;">
 
 			</div>
@@ -247,11 +247,11 @@
 			<div id = 'main36'><script>draw_article_button('main36','multituden-i-en-hotellfrukost',isMobile)</script></div>
 
 			<h2 style = "width: 100%;">GAFFELS INNE-UTE-LISTA</h2>
-			<div id = 'iul'><script>draw_article_button('iul','inne-ute-dec-24',isMobile)</script></div>
+			<div id = 'iul'><script>draw_article_button('iul','inne-ute-jan-25',isMobile)</script></div>
 			<div style = "display: grid;">
+				<a class = 'artikel_knapp' href='/artikel?=inne-ute-dec-24'>DECEMBER</a>
 				<a class = 'artikel_knapp' href='/artikel?=inne-ute-nov-24'>NOVEMBER</a>
-				<a class = 'artikel_knapp' href='/artikel?=inne-ute-okt-24'>OKTOBER</a>
-				<a class = 'artikel_knapp' href='/artikel?=inne-ute-sep-24'>SEPTEMBER</a>				
+				<a class = 'artikel_knapp' href='/artikel?=inne-ute-okt-24'>OKTOBER</a>								
 			</div>
 			
 			<h2 style = "width: 100%;">ÄLDRE</h2>
