--- a/tarot.html
+++ b/tarot.html
@@ -214,7 +214,7 @@
 		    "Rättvisan skola segra! Du kommer ha en kortare flört med syndikalistiska idéer och skriva en intressant men totalt oläsbar essä om rättvisebegreppet hos Kant och Marx.",
 		    "Överge civilisationen. Du kommer välja natur över kultur och överge stadslivet. Möjliga tillflyktsorter: Haparanda, Arvika, Härnösand, Dorotea, Fårö.",
 		    "Du är fjädern i Fru Fortunas hatt. Det är dags att satsa, du kommer börja hänga på travbanan, bingoklubbarna och ditt lokala mahjongställe. När året är slut kommer vinsterna och förlusterna gå på ett ut, men du kommer att ha haft kul på vägen.",
-		    "BÄNK \nPRESS\n Dags att bli enorm.",
+		    "BÄNK <br>PRESS<br> Dags att bli enorm.",
 		    ":(",
 		    "Aj, aj aj. Det här ser inte bra ut. I värsta fall: ond bråd död, möjligtvis genom en giftpilsattack. I mer metaforisk mening: bli av med jobbet, bli dumpad, stuka foten. Hur som helst är det trist.",
 		    "Nykterism väntar. Du kommer må bättre rent fysiskt men dina vänner inser långsamt att de bara tycker om dig när både du och de är fulla.",
@@ -249,7 +249,7 @@
                       console.log(i);
                       console.log(b);
                       
-                      document.getElementById("text").innerHTML = t + "\n\n" + "Gör:" + g + "\n\n" + "Undvik:" + u;
+                      document.getElementById("text").innerHTML = t;
                       document.getElementById("k").src = "/bilder/tarot/" + b + ".png";
                   }
               });
