--- a/tarot.html
+++ b/tarot.html
@@ -188,6 +188,8 @@
               </div>
             </div>
 	    <p id= "text" class = "beskrivning">ooooooooooooooooooooooooooo</p>
+	    <p class = "beskrivning">Gör:</p>
+	    <p class = "beskrivning">Undvik:</p>
 	    <button id = "knapp">tell your friends</button>
 	    <br><br>
         </div>
