--- a/tarot.html
+++ b/tarot.html
@@ -188,8 +188,7 @@
               </div>
             </div>
 	    <p id= "text" class = "beskrivning">ooooooooooooooooooooooooooo</p>
-	    <p class = "beskrivning">Gör:</p>
-	    <p class = "beskrivning">Undvik:</p>
+	    <p id = "råd" class = "beskrivning">Gör: <br> Undvik:</p>
 	    <button id = "knapp">tell your friends</button>
 	    <br><br>
         </div>
@@ -236,6 +235,7 @@
               card.addEventListener( 'click', function() {
 		card.classList.toggle('is-flipped');
 		document.getElementById("text").classList.toggle('is-flipped');
+		document.getElementById("råd").classList.toggle('is-flipped');
 		document.getElementById("knapp").classList.toggle('is-flipped');
   
                   flip = !flip;
@@ -252,6 +252,7 @@
                       console.log(b);
                       
                       document.getElementById("text").innerHTML = t;
+		      document.getElementById("råd").innerHTML = "Gör: " + g + "<br>" + "Undvik: " + u;
                       document.getElementById("k").src = "/bilder/tarot/" + b + ".png";
                   }
               });
