--- a/tarot.html
+++ b/tarot.html
@@ -188,7 +188,7 @@
               </div>
             </div>
 	    <p id= "text" class = "beskrivning">ooooooooooooooooooooooooooo</p>
-	    <p id = "råd" class = "beskrivning">Gör: <br> Undvik:</p>
+	    <p id = "råd" class = "beskrivning" style = "font-size: 0.7em;">Gör: <br> Undvik:</p>
 	    <button id = "knapp">tell your friends</button>
 	    <br><br>
         </div>
