--- a/header.html
+++ b/header.html
@@ -1,6 +1,16 @@
 <!DOCTYPE html>
 <html>
     <head>
+
+	<!-- Google tag (gtag.js) -->
+	<script async src="https://www.googletagmanager.com/gtag/js?id=G-HR8REX9FGG"></script>
+	<script>
+	  window.dataLayer = window.dataLayer || [];
+	  function gtag(){dataLayer.push(arguments);}
+	  gtag('js', new Date());
+	
+	  gtag('config', 'G-HR8REX9FGG');
+	</script>
         <style>
 
         @font-face {
