--- a/index.html
+++ b/index.html
@@ -2,6 +2,16 @@
 <html lang="en">
  
 <head>
+	<!-- Google tag (gtag.js) -->
+	<script async src="https://www.googletagmanager.com/gtag/js?id=G-HR8REX9FGG"></script>
+	<script>
+	  window.dataLayer = window.dataLayer || [];
+	  function gtag(){dataLayer.push(arguments);}
+	  gtag('js', new Date());
+	
+	  gtag('config', 'G-HR8REX9FGG');
+	</script>
+        <style>
 	<meta charset="UTF-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 	<meta name="description" content="Gaffel Magasin är sveriges farligaste popkulturmagasin. Allt det du borde veta om mode, pop, kultur och popkultur. Jag läser gaffel, vafan gör du?">
