--- a/header.html
+++ b/header.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
     <head>
-
+	<style>
         @font-face {
 		  font-family: Helvetica-Bold;
 		  src: url(font/Helvetica-Bold.ttf) format("truetype");
