--- a/index.html
+++ b/index.html
@@ -253,9 +253,9 @@
 		
 		<div id ='blogg_inlägg' class = blog_area>
 			<h2 style = "width: 100%;">SENASTE</h2>
+			<div id = 'main39'><script>draw_article_button('main39','a-day-at-the-races',isMobile)</script></div>
 			<div id = 'main38'><script>draw_article_button('main38','j-accuse-valhallabadet',isMobile)</script></div>
-			<div id = 'main37'><script>draw_article_button('main37','en-kort-historia-om-dönern',isMobile)</script></div>
-			<div id = 'main36'><script>draw_article_button('main36','multituden-i-en-hotellfrukost',isMobile)</script></div>
+			<div id = 'main37'><script>draw_article_button('main37','några-militära-nyord',isMobile)</script></div>		
 
 			<h2 style = "width: 100%;">GAFFELS INNE-UTE-LISTA</h2>
 			<div id = 'iul'><script>draw_article_button('iul','inne-ute-jan-25',isMobile)</script></div>
@@ -266,7 +266,8 @@
 			</div>
 			
 			<h2 style = "width: 100%;">ÄLDRE</h2>
-			<div id = 'main35'><script>draw_article_button('main35','några-militära-nyord',isMobile)</script></div>
+			<div id = 'main36'><script>draw_article_button('main36','multituden-i-en-hotellfrukost',isMobile)</script></div>
+			<div id = 'main35'><script>draw_article_button('main35','en-kort-historia-om-dönern',isMobile)</script></div>
 			<div id = 'main34'><script>draw_article_button('main34','staden-av-igår',isMobile)</script></div>
 			<div id = 'main33'><script>draw_article_button('main33','dagbok-från-kylskåpet',isMobile)</script></div>
 			<div id = 'main32'><script>draw_article_button('main32','om-tom-alandh',isMobile)</script></div>
