--- a/tarot.html
+++ b/tarot.html
@@ -200,7 +200,9 @@
 	    <p id= "text" class = "beskrivning">ooooooooooooooooooooooooooo</p>
 	    <p id = "råd" class = "beskrivning" style = "font-size: 0.9em;">Gör: <br> Undvik:</p>
 	    <button id = "knapp">tell your friends</button>
-	    <br><br>
+	    <br>
+	    <a href="https://gaffel.nu" class = "intr">mer från gaffel</a>
+	    <br>
         </div>
         
 
