--- a/index.html
+++ b/index.html
@@ -163,7 +163,7 @@
 </head>
  
 <body>
-	<script src = "script_closed.js"></script>
+	<!--<script src = "script_closed.js"></script>-->
 	
 	<div id = 'web-header'><script> 
 		fetch('header.html')
