--- a/index.html
+++ b/index.html
@@ -195,16 +195,16 @@
 	
 	<div class = tidning>
 		
-		<div id = 'top' style = "width: 100%; margin-top: 20px; margin-bottom: 20px;">
+		<!--<div id = 'top' style = "width: 100%; margin-top: 20px; margin-bottom: 20px;">
 			<div id = 'blickfång'><script>draw_article_button('blickfång','inne-ute-jan-25',isMobile)</script></div>	
 			<div style = "background: black; width: 100%;">
 
 			</div>
-		</div>
+		</div>-->
 
 		<div id="tarot"></div>
 		<script>
-		var new_html = `<a href = "gaffel.nu/tarot>"`
+		var new_html = `<a href = "tarot"`>
 		
 		new_html += `<div style = "width:100%; height: auto; display: table; margin-bottom: 10px">`
 		if(isMobile == false){
