--- a/index.html
+++ b/index.html
@@ -204,7 +204,7 @@
 
 		<div id="tarot"></div>
 		<script>
-		var new_html = `<a href = "tarot"`>
+		var new_html = `<a href = "tarot">`
 		
 		new_html += `<div style = "width:100%; height: auto; display: table; margin-bottom: 10px">`
 		if(isMobile == false){
