--- a/index.html
+++ b/index.html
@@ -272,9 +272,9 @@
 		
 		<div id ='blogg_inlägg' class = blog_area>
 			<h2 style = "width: 100%;">SENASTE</h2>
+			<div id = 'main40'><script>draw_article_button('main40','vertikala-cineaster',isMobile)</script></div>
 			<div id = 'main39'><script>draw_article_button('main39','a-day-at-the-races',isMobile)</script></div>
-			<div id = 'main38'><script>draw_article_button('main38','j-accuse-valhallabadet',isMobile)</script></div>
-			<div id = 'main37'><script>draw_article_button('main37','några-militära-nyord',isMobile)</script></div>		
+			<div id = 'main38'><script>draw_article_button('main38','några-militära-nyord',isMobile)</script></div>		
 
 			<h2 style = "width: 100%;">GAFFELS INNE-UTE-LISTA</h2>
 			<div id = 'iul'><script>draw_article_button('iul','inne-ute-jan-25',isMobile)</script></div>
@@ -285,6 +285,7 @@
 			</div>
 			
 			<h2 style = "width: 100%;">ÄLDRE</h2>
+			<div id = 'main37'><script>draw_article_button('main37','j-accuse-valhallabadet',isMobile)</script></div>
 			<div id = 'main36'><script>draw_article_button('main36','multituden-i-en-hotellfrukost',isMobile)</script></div>
 			<div id = 'main35'><script>draw_article_button('main35','en-kort-historia-om-dönern',isMobile)</script></div>
 			<div id = 'main34'><script>draw_article_button('main34','staden-av-igår',isMobile)</script></div>
