--- a/artikel.html
+++ b/artikel.html
@@ -127,7 +127,7 @@
 	  <div style = "background: #001015FF; padding-top: 30px;">
 		<div id = 'rec1'><script>draw_article_button('rec1','några-militära-nyord',isMobile)</script></div>	
 		<div id = 'rec2'><script>draw_article_button('rec2','inne-ute-jan-25',isMobile)</script></div>	
-		<div id = 'rec3'><script>draw_article_button('rec3','jaccuse-valhallabadet',isMobile)</script></div>
+		<div id = 'rec3'><script>draw_article_button('rec3','a-day-at-the-races',isMobile)</script></div>
 	  </div>
         </div>
 
