--- a/index.html
+++ b/index.html
@@ -195,12 +195,12 @@
 	
 	<div class = tidning>
 		
-		<!--<div id = 'top' style = "width: 100%; margin-top: 20px; margin-bottom: 20px;">
-			<div id = 'blickfång'><script>draw_article_button('blickfång','inne-ute-jan-25',isMobile)</script></div>	
+		<div id = 'top' style = "width: 100%; margin-top: 20px; margin-bottom: 20px;">
+			<div id = 'blickfång'><script>draw_article_button('blickfång','inne-ute-feb-25',isMobile)</script></div>	
 			<div style = "background: black; width: 100%;">
 
 			</div>
-		</div>-->
+		</div>
 
 		<div id="tarot"></div>
 		<script>
