--- a/artikel.html
+++ b/artikel.html
@@ -2,7 +2,7 @@
 <html>
     <head>
 	<!-- Google tag (gtag.js) -->
-	<script async src="https://www.googletagmanager.com/gtag/js?id=G-HR8REX9FGG"></script>
+	<!--<script async src="https://www.googletagmanager.com/gtag/js?id=G-HR8REX9FGG"></script>
 	<script>
 	  window.dataLayer = window.dataLayer || [];
 	  function gtag(){dataLayer.push(arguments);}
@@ -11,7 +11,7 @@
 	  gtag('config', 'G-HR8REX9FGG');
 	</script>
 	<meta name="viewport" content="width=device-width, initial-scale=1" />
-        <link rel="icon" type="image/x-icon" href="/favicon.ico">
+        <link rel="icon" type="image/x-icon" href="/favicon.ico">-->
        
 	<style>
             @font-face {
