--- a/artikel.html
+++ b/artikel.html
@@ -9,9 +9,9 @@
 	  gtag('js', new Date());
 	
 	  gtag('config', 'G-HR8REX9FGG');
-	</script>
+	</script>-->
 	<meta name="viewport" content="width=device-width, initial-scale=1" />
-        <link rel="icon" type="image/x-icon" href="/favicon.ico">-->
+        <link rel="icon" type="image/x-icon" href="/favicon.ico">
        
 	<style>
             @font-face {
