--- a/tarot.html
+++ b/tarot.html
@@ -9,10 +9,10 @@
 	  gtag('js', new Date());
 	
 	  gtag('config', 'G-HR8REX9FGG');
-	</script>
+	</script>-->
 	<meta charset="UTF-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
-	<title>TAROTMASKINEN</title>-->
+	<title>TAROTMASKINEN</title>
         
 	<style>
             @font-face {
