--- a/index.html
+++ b/index.html
@@ -272,6 +272,7 @@
 		
 		<div id ='blogg_inlägg' class = blog_area>
 			<h2 style = "width: 100%;">SENASTE</h2>
+			<div id = 'main42'><script>draw_article_button('main42','om-pär-thörn',isMobile)</script></div>
 			<div id = 'main41'><script>draw_article_button('main41','la-la-guldbaggen',isMobile)</script></div>
 			<div id = 'main40'><script>draw_article_button('main40','vertikala-cineaster',isMobile)</script></div>
 			<div id = 'main39'><script>draw_article_button('main39','a-day-at-the-races',isMobile)</script></div>	
