--- a/header.html
+++ b/header.html
@@ -73,10 +73,10 @@
             </div> 
 	
 	
-		
-	    <div class = left_div>
-		<a href="/"><img src = "bilder/logga_morf_vit.png" style = "height: 100%; width: auto;"></img></a>
-            </div> 
+		<div class = left_div>
+	            <a href = "" class = head_cont>HEM</a>
+	        </div>
+
 		
             <div class = right_div>
             <a href = "drakens-värld" class = head_cont>DRAKENS VÄRLD</a>
