--- a/hemliga-klubben-inlogg.html
+++ b/hemliga-klubben-inlogg.html
@@ -37,7 +37,11 @@
 			font-weight: 400;
 			margin: 5px;
 		}
-
+		.lösen{
+			margin: auto;
+			font-family: helvetica_bold;
+			font-size: 2em;
+		}
 	</style>
 
 </head>
@@ -59,7 +63,7 @@
 	    });
 	</script>
 	
-	<input type="text" id="myInput" placeholder="Type something here">
+	<input type="text" id="myInput" placeholder="Type something here" class="lösen">
       
 </body>
  
