--- a/hemliga-klubben-inlogg.html
+++ b/hemliga-klubben-inlogg.html
@@ -44,13 +44,17 @@
 			justify-content: center;
 		}
 		.titel{
+			margin-left: auto;
+			margin-right: auto;
 			color: white;
 			font-family: morfeta;
+			display: block;
 			font-size: 4em;
 		}
 		.lösen{
 			margin-left: auto;
 			margin-right: auto;
+			display: block;
 			font-family: helvetica_bold;
 			font-size: 4em;
 		}
@@ -74,10 +78,10 @@
 	        console.log('Current input value: ' + this.value);
 	    });
 	</script>
-	<div class = "hållare">
+	
 		<p class = "titel">Lösenord:</p>
 		<input type="text" id="myInput" placeholder="" class="lösen">
-        </div>
+        
 </body>
  
 </html>
