--- a/hemliga-klubben-inlogg.html
+++ b/hemliga-klubben-inlogg.html
@@ -37,18 +37,12 @@
 			font-weight: 400;
 			margin: 5px;
 		}
-		.hållare{
-			width: 100%;  
-			height: 200px;
-			align-items: center;
-			justify-content: center;
-		}
+
 		.titel{
-			margin-left: auto;
-			margin-right: auto;
+
 			color: white;
 			font-family: morfeta;
-			display: block;
+			text-align: center;
 			font-size: 4em;
 		}
 		.lösen{
