--- a/header.html
+++ b/header.html
@@ -74,7 +74,7 @@
 	
 	
 		<div class = left_div>
-	            <a href = "" class = head_cont>GAFFEL MAGASIN</a>
+	            <a href = "/" class = head_cont>GAFFEL MAGASIN</a>
 	        </div>
 
 		
