--- a/hemliga-klubben-inlogg.html
+++ b/hemliga-klubben-inlogg.html
@@ -50,7 +50,7 @@
 			margin-right: auto;
 			display: block;
 			font-family: helvetica_bold;
-			font-size: 4em;
+			font-size: clamp(10px,9%,50px);;
 			width: clamp(100px,90%,500px);
 		}
 	</style>
