--- a/hemliga-klubben-inlogg.html
+++ b/hemliga-klubben-inlogg.html
@@ -44,6 +44,8 @@
 			font-family: morfeta;
 			text-align: center;
 			font-size: 4em;
+			margin-top: 1vw;
+			margin-bottom: 1vw;
 		}
 		.lösen{
 			margin-left: auto;
@@ -75,6 +77,7 @@
 	</script>
 	
 		<p class = "titel">Lösenord:</p>
+		<p class = "titel">HEMLIGA KLUBBEN:</p>
 		<input type="text" id="myInput" placeholder="" class="lösen">
         
 </body>
