--- a/hemliga-klubben-inlogg.html
+++ b/hemliga-klubben-inlogg.html
@@ -76,8 +76,8 @@
 	    });
 	</script>
 	
+		<p class = "titel">HEMLIGA KLUBBEN</p>	
 		<p class = "titel">Lösenord:</p>
-		<p class = "titel">HEMLIGA KLUBBEN:</p>
 		<input type="text" id="myInput" placeholder="" class="lösen">
         
 </body>
