--- a/hemliga-klubben-inlogg.html
+++ b/hemliga-klubben-inlogg.html
@@ -44,8 +44,8 @@
 			font-family: morfeta;
 			text-align: center;
 			font-size: 4em;
-			margin-top: 1vw;
-			margin-bottom: 1vw;
+			margin-top: 3vw;
+			margin-bottom: 2vw;
 			line-height: 1;
 		}
 		.lösen{
@@ -54,7 +54,7 @@
 			display: block;
 			font-family: helvetica_bold;
 			font-size: clamp(10px,9vw,50px);;
-			width: clamp(100px,90%,500px);
+			width: clamp(100px,80%,500px);
 		}
 	</style>
 
@@ -77,8 +77,7 @@
 	    });
 	</script>
 	
-		<p class = "titel">HEMLIGA KLUBBEN</p>	
-		<p class = "titel">Lösenord:</p>
+		<p class = "titel">HEMLIGA KLUBBEN<br>Lösenord:</p>	
 		<input type="text" id="myInput" placeholder="" class="lösen">
         
 </body>
