--- a/hemliga-klubben-inlogg.html
+++ b/hemliga-klubben-inlogg.html
@@ -56,6 +56,13 @@
 			font-size: clamp(10px,9vw,50px);;
 			width: clamp(100px,80%,500px);
 		}
+		.bild{
+			margin-left: auto;
+			margin-right: auto;
+			display: block;
+			width: clamp(100px,80%,500px);
+			height: auto;
+		}
 	</style>
 
 </head>
@@ -76,7 +83,7 @@
 	        console.log('Current input value: ' + this.value);
 	    });
 	</script>
-	
+		<img src = "https://i.imgur.com/TveKoW8.png" class = "bild"></img>
 		<p class = "titel">HEMLIGA KLUBBEN<br>Lösenord:</p>	
 		<input type="text" id="myInput" placeholder="" class="lösen">
         
