--- a/hemliga-klubben-inlogg.html
+++ b/hemliga-klubben-inlogg.html
@@ -83,7 +83,7 @@
 	        console.log('Current input value: ' + this.value);
 	    });
 	</script>
-		<img src = "https://i.imgur.com/TveKoW8.png" class = "bild"></img>
+		<!--<img src = "https://i.imgur.com/TveKoW8.png" class = "bild"></img>-->
 		<p class = "titel">HEMLIGA KLUBBEN<br>Lösenord:</p>	
 		<input type="text" id="myInput" placeholder="" class="lösen">
         
