--- a/hemliga-klubben-inlogg.html
+++ b/hemliga-klubben-inlogg.html
@@ -85,7 +85,7 @@
 	</script>
 		<!--<img src = "https://i.imgur.com/TveKoW8.png" class = "bild"></img>-->
 		<p class = "titel">HEMLIGA KLUBBEN<br>Lösenord:</p>	
-		<input type="text" id="myInput" placeholder="" class="lösen">
+		<input type="text" id="myInput" placeholder="" class="lösen" maxlength="8">
         
 </body>
  
