--- a/hemliga-klubben-inlogg.html
+++ b/hemliga-klubben-inlogg.html
@@ -86,7 +86,12 @@
 		<!--<img src = "https://i.imgur.com/TveKoW8.png" class = "bild"></img>-->
 		<p class = "titel">HEMLIGA KLUBBEN<br>Lösenord:</p>	
 		<input type="text" id="myInput" placeholder="" class="lösen" maxlength="8">
-        
+		<input type="button" onclick="password()" id="skicka" ></input>
+	<script>
+		function password(){
+			console.log("klick?"):
+		}
+	</script>
 </body>
  
 </html>
