--- a/hemliga-klubben-inlogg.html
+++ b/hemliga-klubben-inlogg.html
@@ -85,7 +85,7 @@
 		<input type="button" onclick="password()" id="skicka" ></input>
 	<script>
 		function password(){
-			console.log("klick?"):
+			console.log("klick?");
 		}
 	</script>
 </body>
