--- a/hemliga-klubben-inlogg.html
+++ b/hemliga-klubben-inlogg.html
@@ -87,6 +87,7 @@
 		function password(){
 			var t = document.getElementById('password_input').value;
 			console.log(t);
+			if(t == "lösenord"){window.location.href = "/drakens-värld";}
 		}
 	</script>
 </body>
