--- a/hemliga-klubben-inlogg.html
+++ b/hemliga-klubben-inlogg.html
@@ -63,6 +63,16 @@
 			width: clamp(100px,90%,900px);
 			height: auto;
 		}
+		.knapp{
+			background: white;
+			color: black;
+			margin-left: auto;
+			margin-right: auto;
+			display: block;
+			font-family: helvetica_bold;
+			font-size: clamp(10px,9vw,50px);;
+			width: clamp(100px,80%,500px);
+		}
 	</style>
 
 </head>
@@ -82,7 +92,7 @@
 	<!--<img src = "https://i.imgur.com/TveKoW8.png" class = "bild"></img>-->
 		<p class = "titel">HEMLIGA KLUBBEN<br>Lösenord:</p>	
 		<input type="text" id="password_input" placeholder="" class="lösen" maxlength="8">
-		<input type="button" onclick="password()" id="skicka" ></input>
+		<input type="button" onclick="password()" id="skicka" class = "knapp";>Testa</input>
 	<script>
 		function password(){
 			var t = document.getElementById('password_input').value;
