--- a/hemliga-klubben-inlogg.html
+++ b/hemliga-klubben-inlogg.html
@@ -73,6 +73,10 @@
 			font-family: helvetica_bold;
 			font-size: clamp(4px,5vw,40px);;
 		}
+		.knapp:hover{
+			background: black;
+			color: white;
+		}
 	</style>
 
 </head>
